fix: scaling a bit too large

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -55,6 +55,6 @@ button[disabled]:hover {
 
 @media screen and (min-width: 700px) {
   body {
-   --type-ramp-base-font-size: 18px;
+   --type-ramp-base-font-size: 16px;
   }
 }
